# sandbox

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: app.rs  coord.rs  event.rs  main.rs  particle.rs  simulation_widget.rs  ui.rs  window.rs
