[package]
name = "sandbox"
version = "0.1.0"
authors = ["Andreas Nachtmann <andreas.nachtmann@mathema.de>"]
edition = "2024"
description = "An example generated using the event-driven template"
license = "MIT"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
rand = "0.9.2"
ratatui = "0.29.0"

